src/objects/AMS_OSCAR__c.object
<CustomObject>
    <fields>
        <fullName>DGR_Last_Name__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGR_Organization__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Issuer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGR_Position__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Position__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGR_Record__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Id, AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Name,  &quot;Self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Regulation Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGR_Reference__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGR_Validaty__c</fullName>
        <description>Formula field to display requiered information at the OSCAR level - to be used on the email templates</description>
        <formula>text(AMS_Online_Accreditation__r.DGR_Agency_Regulation__r.Validity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validaty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPC_updated__c</fullName>
        <label>DPC updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <description>When the user changes the SALM status to any of the 4 Closed values (either on the left or directly in the centre), the Date Closed field should be populated with the current date and the case should be closed.</description>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disapproval_date__c</fullName>
        <label>Disapproval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disapproval_pack_sent__c</fullName>
        <label>Disapproval pack sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disapproval_result__c</fullName>
        <label>Disapproval result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentation_Compliant__c</fullName>
        <label>Documentation Compliant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_remarks__c</fullName>
        <label>Documentation remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dossier_Reception_Date__c</fullName>
        <label>Dossier Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dossier_Validation__c</fullName>
        <label>Dossier Validation received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_date__c</fullName>
        <description>Date when the approval finalization is Passed on the OSCAR</description>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emails_reference_Id__c</fullName>
        <label>Emails reference Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endorsement_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ford GDI process</description>
        <label>Endorsement Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endorsement_requested_date__c</fullName>
        <label>Endorsement requested date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_refund_requested__c</fullName>
        <label>Fees refund requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_refunds_requested_withdrawal__c</fullName>
        <label>Fees refunds requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finalization_checklist__c</fullName>
        <description>Process SCE</description>
        <inlineHelpText>Tasks performed during the finalization phase</inlineHelpText>
        <label>Finalization checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval email sent</fullName>
                </value>
                <value>
                    <fullName>Approval letter sent</fullName>
                </value>
                <value>
                    <fullName>BG attached</fullName>
                </value>
                <value>
                    <fullName>BG updated in AIMS</fullName>
                </value>
                <value>
                    <fullName>Original BG sent to LO</fullName>
                </value>
                <value>
                    <fullName>PSAA / Agreement signed and stored</fullName>
                </value>
                <value>
                    <fullName>Setup in BSPlink/Maestro/myIATA</fullName>
                </value>
                <value>
                    <fullName>BG Updated in CAIMS (C&amp;NA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finalization_result__c</fullName>
        <label>Finalization result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finalized_in_AIMS__c</fullName>
        <label>Finalized in AIMS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Financial_Assessment_compliant__c</fullName>
        <label>Financial Assessment compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Assessment_deadline__c</fullName>
        <label>Financial Assessment deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Assessment_received__c</fullName>
        <label>Financial Assessment received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Assessment_requested__c</fullName>
        <label>Financial Assessment requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Assessment_time__c</fullName>
        <formula>IF( AND(NOT(ISNULL(Financial_Assessment_requested__c)),NOT(ISNULL( Financial_Assessment_received__c))), 
IF(Financial_Assessment_received__c - Financial_Assessment_requested__c =6, TEXT(4), TEXT((Financial_Assessment_received__c - Financial_Assessment_requested__c - (2*FLOOR((Financial_Assessment_received__c - Financial_Assessment_requested__c)/7)))) ) 
,&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Assessment time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Review_Result__c</fullName>
        <description>Used for default management</description>
        <label>Financial Review Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory - New Financial Security</fullName>
                </value>
                <value>
                    <fullName>Satisfactory - Update Financial Security</fullName>
                </value>
                <value>
                    <fullName>Satisfactory - Release Financial Security</fullName>
                </value>
                <value>
                    <fullName>Satisfactory - No Action</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory - New Financial Security</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory - Update Financial Security</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory - No action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Security_Information__c</fullName>
        <label>Financial Security Information</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Security_Received__c</fullName>
        <label>Financial Security Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Security_expiry_date__c</fullName>
        <label>Financial Security expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Security_released__c</fullName>
        <label>Financial Security released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Security_released_withdrawal__c</fullName>
        <label>Financial Security released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_security_information_confirmed__c</fullName>
        <label>Financial security information confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_security_result__c</fullName>
        <label>Financial Security Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Step_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Step Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Data_to_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when checked means that the Staging Data was copied to the account with sucess, if not checked means that the Staging Data needs to be  copied to the account!</description>
        <label>Flag Data to Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Data_to_SAPECC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when checked means that the account data was sent to SAP ECC with sucess, if not checked means that the account data needs to be sent to SAP ECC!</description>
        <label>Flag Data to SAPECC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_IATACode_Formula__c</fullName>
        <formula>Account__r.IATACode__c  &lt;&gt; Null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag IATACode Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_IATACode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when checked means that the IATACode was generated with sucess, if not checked means that the IATAcode needs to be generated!</description>
        <label>Flag IATACode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Effective_Date__c</fullName>
        <label>Form Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HE_per_BSP_Mapping__c</fullName>
        <label>HE per BSP Mapping</label>
        <length>11048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IATACode__c</fullName>
        <formula>Account__r.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATACode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Codes_NOK__c</fullName>
        <label>IATA Codes NOK</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IATA_Codes_OK__c</fullName>
        <label>IATA Codes OK</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IFAP_Financial_Year__c</fullName>
        <description>Financial year - IFAP application</description>
        <inlineHelpText>Current Financial Year
Format: YYYY</inlineHelpText>
        <label>Financial Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRIS_update_result__c</fullName>
        <label>IRIS update result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IRIS_updated__c</fullName>
        <label>IRIS updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRIS_updated_processing__c</fullName>
        <label>IRIS updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Requested__c</fullName>
        <label>Invoice requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_deadline__c</fullName>
        <label>Payment deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_number__c</fullName>
        <label>Invoice number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_status__c</fullName>
        <label>Invoice status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_NewGen_Pilot__c</fullName>
        <description>Indicates if the country is a NewGen pilot</description>
        <formula>Account__r.IATA_ISO_Country__r.Enable_NewGen_Pilot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is NewGen Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NewGen__c</fullName>
        <description>Created to avoid extra queries on the code.</description>
        <formula>Account__r.ANG_IsNewGenAgency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is NewGen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PCI_compliant__c</fullName>
        <description>Determines if an agency is PCI Compliant</description>
        <label>Is PCI compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Nil CC</fullName>
                </value>
                <value>
                    <fullName>Corporate Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_using_credit_card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is using credit card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Withdrawal_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Withdrawal notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_billing_document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue billing document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_credit_note_if_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue credit note (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_credit_note_withdrawal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue credit note (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_disapproval_pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue disapproval pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_rejection_notification_pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue rejection notification pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Aux1__c</fullName>
        <formula>Suspended_in_BSPLink_CASSLink__c - Form_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Aux1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_notified_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late notified change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Inspection_compliant__c</fullName>
        <label>Local Inspection result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Inspection_deadline__c</fullName>
        <label>Local Inspection deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Inspection_received__c</fullName>
        <label>Local Inspection received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Inspection_requested__c</fullName>
        <label>Local Inspection requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Inspection_time__c</fullName>
        <formula>IF( AND(NOT(ISNULL(Local_Inspection_requested__c)),NOT(ISNULL( Local_Inspection_received__c))), 
IF(Local_Inspection_received__c - Local_Inspection_requested__c =6, TEXT(4), TEXT((Local_Inspection_received__c - Local_Inspection_requested__c - (FLOOR((Local_Inspection_received__c - Local_Inspection_requested__c)/7)*2))) ) 
,&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Inspection time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Class__c</fullName>
        <formula>TEXT(Account__r.Location_Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <formula>TEXT(Account__r.Location_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Hierarchy_Confirmation_Datetime__c</fullName>
        <description>Field used to store the timestamp of when the user confirmed the hierarchy for multi-country conversion</description>
        <label>MC Hierarchy Confirmation Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NOC_Deadline__c</fullName>
        <description>Used for Late/Absence of NOC</description>
        <label>NOC Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOC_Received_Date__c</fullName>
        <description>Used for Late/Absence of NOC</description>
        <label>NOC Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOC_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NOC Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOC_Requested__c</fullName>
        <description>Used for Late/Absence of NOC</description>
        <label>NOC Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_IFAP_Deadline_date__c</fullName>
        <label>New IFAP Deadline date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_docs_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CS and LO Check this box whenever a new document has been received and attached to the case. ACC unchecks when the documentation has been reviewed</description>
        <label>New docs. Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>On a change of hierarchy process this field determines which will be the new parent of the agencies that are changing to another hierarchy.
    On a conversion from Standard to Multicountry this field is used as an auxiliary lookup to add standard hierarchies to the account selection page using the conditions on the lookup filter (only if the oscar process is ANG.CONVERT.ST.TO.MC)</description>
        <label>New parent</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4 AND 5)</booleanFilter>
            <filterItems>
                <field>$Source.Process__c</field>
                <operation>notEqual</operation>
                <value>ANG.CONVERT.ST.TO.MC</value>
            </filterItems>
            <filterItems>
                <field>Account.ANG_Accreditation_Model__c</field>
                <operation>equals</operation>
                <value>Cash</value>
            </filterItems>
            <filterItems>
                <field>Account.Location_Type__c</field>
                <operation>equals</operation>
                <value>HE</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Listed, Not accreditated, Not in operation, Terminated,</value>
            </filterItems>
            <filterItems>
                <field>$Source.Process__c</field>
                <operation>equals</operation>
                <value>ANG.CONVERT.ST.TO.MC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OSCARs (New parent)</relationshipLabel>
        <relationshipName>OSCARs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_days__c</fullName>
        <formula>if(DGR_Expiry_Date__c - today() &gt; 62,&quot;90&quot;,
if(DGR_Expiry_Date__c - today() &gt; 32,&quot;60&quot;,
if(DGR_Expiry_Date__c - today() &gt; 0,&quot;30&quot;,&quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Agent_Reactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Late/Absence NOC</description>
        <label>Notify Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Agent_Suspension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Agent for Suspension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Agent_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Late/Absence NOC</description>
        <label>Notify Agent for Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Agent_Withdrawal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSCAR_Deadline__c</fullName>
        <label>OSCAR Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Off_site_storage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Off site storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_TKT_System__c</fullName>
        <label>Inform GDS to Open TKT System</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Operational_Systems_Updated__c</fullName>
        <label>BSPlink/CASSlink updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oscar_Communication_Case_Id__c</fullName>
        <label>Oscar Communication Case Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_deadline_SAAM__c</fullName>
        <formula>IF( AND( ISBLANK(Documentation_Compliant__c) , OSCAR_Deadline__c &lt;= DATEVALUE(now())), &quot;Docs &quot;, &quot;&quot;) &amp; IF( AND( ISBLANK( Financial_Assessment_received__c ) , not (isblank(Financial_Assessment_deadline__c)), Financial_Assessment_deadline__c &lt;= DATEVALUE(now())), &quot;FA &quot;, &quot;&quot;) &amp; IF( AND( ISBLANK( Local_Inspection_received__c ) , not (isblank( Local_Inspection_deadline__c )), Local_Inspection_deadline__c &lt;= DATEVALUE(now())), &quot;LI &quot;, &quot;&quot;) &amp; IF( AND( ISBLANK( Bank_Guarantee_received__c ) , not (isblank( Bank_Guarantee_deadline__c )), Bank_Guarantee_deadline__c &lt;= DATEVALUE(now())), &quot;BG &quot;, &quot;&quot;)
&amp; IF( AND( TEXT( AML_result__c )=&quot;&quot; , not (isblank( AML_deadline__c )),  AML_deadline__c&lt;= DATEVALUE(now())), &quot;AML &quot;, &quot;&quot;)
&amp; IF( AND( ISBLANK( PSAA_EACP_Agreement_received__c ) , not (isblank( Agreement_deadline__c )),  Agreement_deadline__c&lt;= DATEVALUE(now())), &quot;AGR &quot;, &quot;&quot;)
&amp; IF( AND( ISBLANK( Proof_of_payment_received__c ) , not (isblank( Invoice_deadline__c)),  Invoice_deadline__c&lt;= DATEVALUE(now())), &quot;PAY &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of deadline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSAA_EACP_Agreement_received__c</fullName>
        <label>Agreement Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSAA_signed_copy_sent__c</fullName>
        <description>Date the signed copy of the PSAA is sent to the agent</description>
        <label>Agreement result</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_OSCAR_Account_Id__c</fullName>
        <description>Formula field to stores the Account Id associated with the parent OSCAR</description>
        <formula>IF(OR(ISBLANK(Parent_OSCAR__c), ISNULL(Parent_OSCAR__c)), CASESAFEID(Account__c), CASESAFEID(Parent_OSCAR__r.Account__c))</formula>
        <label>Parent OSCAR Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_OSCAR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the OSCAR reference to a parent OSCAR. Introduced for the multicountry to standard full conversion process where every child OSCAR created on the different BSPs need to have a link to the original OSCAR created on the main BSP (GE)</description>
        <label>Parent OSCAR</label>
        <referenceTo>AMS_OSCAR__c</referenceTo>
        <relationshipLabel>OSCARs</relationshipLabel>
        <relationshipName>Child_OSCARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>SPDR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_requested__c</fullName>
        <label>Payment requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_setup_performed__c</fullName>
        <label>Portal setup performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_FS_released__c</fullName>
        <description>Saves the date of the previous financial security released</description>
        <label>Previous FS released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_HE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference for the previous HE account when performing a change of location type. This field is set when the sanity check step is passed.</description>
        <label>Previous HE</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OSCARs (Previous HE)</relationshipLabel>
        <relationshipName>Previous_HE_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Eff_Age__c</fullName>
        <label>Process Eff. Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Start_Date__c</fullName>
        <description>To be used for Accreditation in &quot;Process&quot; Record Type</description>
        <label>Process Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>